Switch to the new man(1) command.
* Exchange our old GNU man(1) command with the one from FreeBSD that I
  recently imported. It uses mandoc(1) by default. If mandoc(1) reports
  that it cannot render a page, man(1) will fall back to groff (right
  now our base groff, later the groff pkg when we remove it).

* Install mandoc(1) as apropos(1) and makewhatis(8). This means
  makewhatis moves from /usr/sbin to /usr/bin.

* Use mandoc(1) instead of groff for most purposes of bsd.man.mk.

* Remove /usr/share/man/cat*. It's not necessary anymore to cache
  formatted manual pages.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -872,7 +872,7 @@ BSTRAPDIRS2= \
 	usr.bin/cmp usr.bin/xargs usr.bin/id usr.bin/env usr.bin/dirname \
 	usr.bin/tail usr.bin/unifdef \
 	usr.sbin/chown usr.sbin/mtree usr.sbin/config \
-	usr.sbin/zic usr.sbin/makewhatis usr.sbin/pwd_mkdb \
+	usr.sbin/zic usr.sbin/pwd_mkdb \
 	gnu/usr.bin/grep usr.bin/sort usr.bin/gzip \
 	usr.bin/mkcsmapper usr.bin/mkesdb usr.bin/crunch
 
