Link mandoc(1) as 'whatis' too.
Reported-by: zrj

--- a/usr.bin/mandoc/Makefile
+++ b/usr.bin/mandoc/Makefile
@@ -30,5 +30,7 @@ DPADD=	${LIBZ}
 
 LINKS=	${BINDIR}/mandoc ${BINDIR}/apropos
 LINKS+=	${BINDIR}/mandoc ${BINDIR}/makewhatis
+LINKS+=	${BINDIR}/mandoc ${BINDIR}/whatis
+MLINKS=	apropos.1 whatis.1
 
 .include <bsd.prog.mk>
