--- a/usr.bin/fetch/Makefile
+++ b/usr.bin/fetch/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/usr.bin/fetch/Makefile,v 1.3.6.4 2003/01/09 11:54:58 des Exp $
+# $FreeBSD: head/usr.bin/fetch/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
 PROG=		fetch
 DPADD=		${LIBFETCH}
@@ -6,7 +6,7 @@ LDADD=		-lfetch
 
 DPADD+=		${LIBSSL} ${LIBCRYPTO}
 LDADD+=		-lprivate_ssl -lprivate_crypto
+CFLAGS+=	${PRIVATELIB_CFLAGS}
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-CFLAGS+=	-I${.CURDIR}/../../crypto/libressl/include
 
 .include <bsd.prog.mk>
