nrelease: Install security/ca_root_nss explicitly (non-automatic).
This is to prevent it accidentally being removed by an autoremove
after deleting the package that brought it in as a dependency.

Reported-by: Frank Rehwinkel <frankrehwinkel@gmail.com>

--- a/nrelease/Makefile
+++ b/nrelease/Makefile
@@ -37,7 +37,8 @@ DPORTS_EXTRA_PACKAGES?=
 
 # dports packages to be built and installed on the release ISO
 #
-DPORTS_PACKAGES?=	devel/git \
+DPORTS_PACKAGES?=	security/ca_root_nss \
+			devel/git \
 			dns/bind-tools \
 			net/isc-dhcp44-server \
 			sysutils/cdrtools \
