Remove two more files by 'make upgrade'.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3524,6 +3524,7 @@ TO_REMOVE+=/usr/share/man/man1/catman.1.gz
 TO_REMOVE+=/usr/share/man/man8/catman.local.8.gz
 TO_REMOVE+=/etc/manpath.config
 TO_REMOVE+=/usr/sbin/makewhatis
+TO_REMOVE+=/usr/share/examples/etc/manpath.config
 TO_REMOVE+=/usr/share/man/cat1
 TO_REMOVE+=/usr/share/man/cat2
 TO_REMOVE+=/usr/share/man/cat3
@@ -3535,6 +3536,7 @@ TO_REMOVE+=/usr/share/man/cat8
 TO_REMOVE+=/usr/share/man/cat9
 TO_REMOVE+=/usr/share/man/man5/manpath.config.5.gz
 TO_REMOVE+=/usr/share/man/whatis
+TO_REMOVE+=/etc/pam.d/rsh
 TO_REMOVE+=/usr/bin/addftinfo
 TO_REMOVE+=/usr/bin/afmtodit
 TO_REMOVE+=/usr/bin/eqn
