--- a/share/man/Makefile
+++ b/share/man/Makefile
@@ -3,7 +3,11 @@
 
 SUBDIR=	man1 man3 man4 man5 man6 man7 man8 man9
 
+.if exists(/usr/sbin/makewhatis)
+MAKEWHATIS=	/usr/sbin/makewhatis
+.else
 MAKEWHATIS=	/usr/bin/makewhatis	
+.endif
 
 makedb:
 	-${MAKEWHATIS}	${DESTDIR}${BINDIR}/man
