drm: Bring in the Linux fence implementation from NetBSD

--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -50,6 +50,7 @@ SRCS	= \
 	linux_compat.c \
 	linux_dma.c \
 	linux_dma-buf.c \
+	linux_fence.c \
 	linux_hdmi.c \
 	linux_i2c.c \
 	linux_hrtimer.c \
