libedit: Privatize the last public header.
Adjust all cases to include correct histedit.h header.

--- a/bin/sh/Makefile
+++ b/bin/sh/Makefile
@@ -30,6 +30,7 @@ CFLAGS+=-DSHELL -I. -I${.CURDIR}
 CFLAGS+= -DNO_HISTORY
 # LIBEDIT is not needed here
 .else
+CFLAGS+= ${PRIVATELIB_CFLAGS}
 DPADD= ${LIBEDIT} ${LIBNCURSES}
 LDADD= ${LIBEDIT} ${LIBNCURSES}
 .endif
