Complete upgrade of libedit from 2015-03-25 to 2017-03-29
Disable use of Symbol.map, bump shlib ver and move to shpub.
Add compatibility on api change for lvm(8).

--- a/gnu/sbin/lvm/Makefile
+++ b/gnu/sbin/lvm/Makefile
@@ -35,6 +35,8 @@ CFLAGS+=	-Wno-stack-protector
 #
 .if !defined(RESCUE)
 CFLAGS+=	-DREADLINE_SUPPORT
+# libedit api change for lvm.c
+CFLAGS+=	-DCPPFunction=rl_completion_func_t
 CFLAGS+=	${PRIVATELIB_CFLAGS}
 DPADD+=		${LIBEDIT} ${LIBNCURSES}
 LDADD+=		-lprivate_edit -lprivate_ncurses
