Remove any remaining traces of varargs.h.
This is a follow-up of b3a17fb68c15a4c57da6867f1b2119587b7a68a8.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3648,6 +3648,9 @@ TO_REMOVE+=/usr/share/man/man3/des_cipher.3.gz
 TO_REMOVE+=/usr/share/man/man3/des_setkey.3.gz
 TO_REMOVE+=/usr/include/histedit.h
 TO_REMOVE+=/lib/priv/libprivate_edit.so.5
+TO_REMOVE+=/usr/include/cpu/varargs.h
+TO_REMOVE+=/usr/include/machine/varargs.h
+TO_REMOVE+=/usr/share/man/man3/varargs.3.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
