--- a/share/man/Makefile
+++ b/share/man/Makefile
@@ -3,14 +3,12 @@
 
 SUBDIR=	man1 man3 man4 man5 man6 man7 man8 man9
 
-.if exists(/usr/sbin/makewhatis)
-MAKEWHATIS=	/usr/sbin/makewhatis
-.else
-MAKEWHATIS=	/usr/bin/makewhatis	
-.endif
+MAKEWHATIS=	/usr/bin/makewhatis
 
 makedb:
-	-${MAKEWHATIS}	${DESTDIR}${BINDIR}/man
+.if exists(${MAKEWHATIS})
+	${MAKEWHATIS}	${DESTDIR}${BINDIR}/man
+.endif
 
 .include "${.CURDIR}/../Makefile.inc"
 .include <bsd.subdir.mk>
