Fix building release on master.
* <histedit.h> was moved to /usr/include/priv on master, so add that
  to the include search path when building sh(1) as a bootstrap tool.

* Fix the apropos(1) database generation (used for 'make distribution').
  If the system doesn't have the makewhatis(8) for a compatible
  database, just build no database.

--- a/bin/sh/Makefile
+++ b/bin/sh/Makefile
@@ -28,8 +28,8 @@ CFLAGS+=-DSHELL -I. -I${.CURDIR}
 # SHSRCS+=show.c
 
 .if defined(BOOTSTRAPPING)
-CFLAGS+= -DNO_HISTORY
-# LIBEDIT is not needed here
+CFLAGS+= -DNO_HISTORY	# LIBEDIT is not needed here
+CFLAGS+= -I${_SHLIBDIRPREFIX}/usr/include/priv
 .else
 DPADD= ${LIBEDIT} ${LIBNCURSES}
 LDADD= ${LIBEDIT} ${LIBNCURSES}
