Move <sys/fd_set.h> to <sys/_fd_set.h>.
It is only supposed to be included by other headers. Normal code
should use <sys/select.h>.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3651,6 +3651,7 @@ TO_REMOVE+=/lib/priv/libprivate_edit.so.5
 TO_REMOVE+=/usr/include/cpu/varargs.h
 TO_REMOVE+=/usr/include/machine/varargs.h
 TO_REMOVE+=/usr/share/man/man3/varargs.3.gz
+TO_REMOVE+=/usr/include/sys/fd_set.h
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
