evdev: Create device entries with the "input" group
* Add a new group "input" with an id 43.

* Make the devfs subsystem override the /dev/input/event*
  devices with perm 0660 and root:input.

* This approach is standard in many Linux systems.

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -120,6 +120,8 @@ preupgrade:
 		pw -V ${DESTDIR}/etc useradd _dhcp -u 77 \
 		   -c "DHCP programs" \
 		   -d /var/empty -s /sbin/nologin
+	(pw -V ${DESTDIR}/etc groupshow input -q > /dev/null) || \
+		pw -V ${DESTDIR}/etc groupadd input -g 43
 	(pw -V ${DESTDIR}/etc groupshow video -q > /dev/null) || \
 		pw -V ${DESTDIR}/etc groupadd video -g 44
 	(pw -V ${DESTDIR}/etc groupshow authpf -q > /dev/null) || \
