installer - Default to HAMMER2
* Change the installer default from HAMMER1 to HAMMER2.

* Adjust the nrelease build to print the location of the image files
  when it finishes.

--- a/nrelease/Makefile
+++ b/nrelease/Makefile
@@ -396,7 +396,7 @@ mkimg:
 	vnconfig -u `cat ${ISODIR}/vn.which`
 	rm -f ${ISODIR}/vn.which
 	rmdir ${IMGMNT}
-	@echo "STEP: done"
+	@echo "STEP: done, image files are in ${ISODIR}"
 
 clean:
 	sync
