terminfo: Build and install st, st-16color and st-256color
Support the st (simple terminal) from the suckless project:
https://st.suckless.org/

Submitted-by: daftaupe
Bug-report: #3159

--- a/share/terminfo/Makefile.entries
+++ b/share/terminfo/Makefile.entries
@@ -1797,6 +1797,9 @@ ENTRY=	1/1178 \
 	s/soroc120 \
 	s/soroc140 \
 	s/spinwriter \
+	s/st \
+	s/st-16color \
+	s/st-256color \
 	s/st52 \
 	s/st52-color \
 	s/st52-m \
