--- a/usr.sbin/yp_mkdb/Makefile
+++ b/usr.sbin/yp_mkdb/Makefile
@@ -10,6 +10,6 @@ MAN=	yp_mkdb.8
 .PATH:	${.CURDIR}/../../libexec/ypxfr ${.CURDIR}/../ypserv
 
 CFLAGS+= -Dyp_error=warnx -I${.CURDIR}/../../libexec/ypxfr
-CFLAGS+= -I${.CURDIR}/../../usr.sbin/ypserv
+CFLAGS+= -I${.CURDIR}/../ypserv
 
 .include <bsd.prog.mk>
