--- a/usr.bin/users/Makefile
+++ b/usr.bin/users/Makefile
@@ -1,6 +1,5 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $DragonFly: src/usr.bin/users/Makefile,v 1.3 2007/08/27 16:51:00 pavalos Exp $
-.PATH: ${.CURDIR}/../../usr.bin/who
+.PATH: ${.CURDIR}/../who
 
 PROG=	users
 SRCS=	users.c utmpentry.c
@@ -8,6 +7,6 @@ SRCS=	users.c utmpentry.c
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
 
-CFLAGS+= -I${.CURDIR}/../../usr.bin/who -DSUPPORT_UTMP -DSUPPORT_UTMPX
+CFLAGS+= -I${.CURDIR}/../who -DSUPPORT_UTMP -DSUPPORT_UTMPX
 
 .include <bsd.prog.mk>
