--- a/usr.bin/write/Makefile
+++ b/usr.bin/write/Makefile
@@ -1,7 +1,6 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $DragonFly: src/usr.bin/write/Makefile,v 1.3 2007/08/27 16:51:01 pavalos Exp $
 
-.PATH: ${.CURDIR}/../../usr.bin/who
+.PATH: ${.CURDIR}/../who
 
 PROG=	write
 SRCS=	write.c utmpentry.c
@@ -11,6 +10,6 @@ BINGRP=	tty
 DPADD+=	${LIBUTIL}
 LDADD+=	-lutil
 
-CFLAGS+= -I${.CURDIR}/../../usr.bin/who -DSUPPORT_UTMP -DSUPPORT_UTMPX
+CFLAGS+= -I${.CURDIR}/../who -DSUPPORT_UTMP -DSUPPORT_UTMPX
 
 .include <bsd.prog.mk>
