drm/linux: Rework wait queues
* Make the implementation much closer to the Linux one

* Do not directly try to wake up threads, but use an indirect function
  call to do it, allowing drivers to override the default function

* Implement the expected default_wake_function() and
  autoremove_wake_function() routines

--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -64,6 +64,7 @@ SRCS	= \
 	linux_shmem.c \
 	linux_sort.c \
 	linux_vmalloc.c \
+	linux_wait.c \
 	linux_workqueue.c \
 	linux_wwmutex.c \
 	ttm_tt.c \
