world: Remove libmd from the base.
Everything in base has been converted to use pure LibreSSL hash API.
The libmd now is moved to dports security/libmd for compatibility.

Also remove lone rmd160.h header that was added directly to include/.

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3687,6 +3687,64 @@ TO_REMOVE+=/usr/share/man/man5/opiekeys.5.gz
 TO_REMOVE+=/usr/share/man/man8/pam_opie.8.gz
 TO_REMOVE+=/usr/share/man/man8/pam_opieaccess.8.gz
 TO_REMOVE+=/var/spool/opielocks
+TO_REMOVE+=/lib/libmd.so.3
+TO_REMOVE+=/usr/include/md2.h
+TO_REMOVE+=/usr/include/md4.h
+TO_REMOVE+=/usr/include/md5.h
+TO_REMOVE+=/usr/include/ripemd.h
+TO_REMOVE+=/usr/include/rmd160.h
+TO_REMOVE+=/usr/include/sha.h
+TO_REMOVE+=/usr/include/sha256.h
+TO_REMOVE+=/usr/include/sha512.h
+TO_REMOVE+=/usr/lib/profile/libmd.a
+TO_REMOVE+=/usr/lib/libmd.a
+TO_REMOVE+=/usr/lib/libmd.so
+TO_REMOVE+=/usr/share/man/man3/MD2Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2End.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2File.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2Final.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2Init.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2Pad.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD2Update.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4End.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4File.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4Final.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4Init.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4Pad.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD4Update.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5End.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5File.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5Final.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5Init.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5Pad.3.gz
+TO_REMOVE+=/usr/share/man/man3/MD5Update.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA1_Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA1_End.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA1_File.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA1_FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA256_Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA256_End.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA256_File.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA256_FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA512_Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA512_End.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA512_File.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA512_FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA_Data.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA_End.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA_File.3.gz
+TO_REMOVE+=/usr/share/man/man3/SHA_FileChunk.3.gz
+TO_REMOVE+=/usr/share/man/man3/md2.3.gz
+TO_REMOVE+=/usr/share/man/man3/md4.3.gz
+TO_REMOVE+=/usr/share/man/man3/md5.3.gz
+TO_REMOVE+=/usr/share/man/man3/sha.3.gz
+TO_REMOVE+=/usr/share/man/man3/sha256.3.gz
+TO_REMOVE+=/usr/share/man/man3/sha512.3.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
