drm/radeon: Upgrade to Linux 3.19.8
* Various bug fixes and hardware bug workarounds

* Fan control improvements, especially on Southern Islands (SI)
  and Sea Islands (CI) GPUs

* Performance improvements due to better memory management

--- a/sys/dev/drm/radeon/Makefile
+++ b/sys/dev/drm/radeon/Makefile
@@ -96,7 +96,8 @@ SRCS	+=								\
 
 # add KMS driver
 SRCS+=				\
-	radeon_mn.c
+	radeon_mn.c		\
+	radeon_sync.c
 
 # async DMA block
 SRCS	+=								\
@@ -119,7 +120,8 @@ SRCS	+=								\
 SRCS	+=								\
 	radeon_vce.c							\
 	vce_v1_0.c							\
-	vce_v2_0.c
+	vce_v2_0.c \
+	radeon_kfd.c
 
 #radeon_ioc32.c
 #radeon_prime.c
