build - Allow buildworld to run from a 4.9 base
* Make an adjustment that allows the latest buildworld to
  be run on an old 4.9 system base.

* Generally speaking mkmagic should be using the (generated) magic.h
  from the build anyway, and not the one in /usr/include which might
  be incompatible.

--- a/lib/libmagic/mkmagic/Makefile
+++ b/lib/libmagic/mkmagic/Makefile
@@ -11,6 +11,10 @@ MAGIC=	${MAGICSHAREDIR}/magic
 CFLAGS+=	-DHAVE_CONFIG_H -DCOMPILE_ONLY -DMAGIC=\"${MAGIC}\"
 CFLAGS+=	-I${.CURDIR}/../libmagic
 
+# needed to access magic.h
+#
+CFLAGS+=	-I${.OBJDIR}
+
 VER!=  grep -w VERSION ${.CURDIR}/../libmagic/config.h | awk -F\" '{print $$2}'
 
 # XXX -Wunused-function in apprentice.c
