init(8): Put utmp/wtmp specific code under SUPPORT_UTMP.

--- a/sbin/init/Makefile
+++ b/sbin/init/Makefile
@@ -9,7 +9,8 @@ INSTALLFLAGS= -b -B.bak
 .if !defined(NOFSCHG)
 INSTALLFLAGS+= -fschg
 .endif
-CFLAGS+=-DDEBUGSHELL -DSECURE -DLOGIN_CAP -DCOMPAT_SYSV_INIT -DSUPPORT_UTMPX
+CFLAGS+=-DDEBUGSHELL -DSECURE -DLOGIN_CAP -DCOMPAT_SYSV_INIT
+CFLAGS+=-DSUPPORT_UTMP -DSUPPORT_UTMPX
 DPADD=	${LIBUTIL} ${LIBCRYPT} ${LIBCRYPTO}
 LDADD=	-lutil -lcrypt -lprivate_crypto
 LDFLAGS+=	${PRIVATELIB_LDFLAGS}
