libc: Build inet/, isc/, and nameser/ from their subdirectories.
Also move inet's documentation to the right place.

--- a/lib/libc/Makefile.inc
+++ b/lib/libc/Makefile.inc
@@ -29,7 +29,10 @@ LDFLAGS+=	-flto
 .include "${.CURDIR}/../libc/sysvipc/Makefile.inc"
 .include "${.CURDIR}/../libc/gmon/Makefile.inc"
 .include "${.CURDIR}/../libc/iconv/Makefile.inc"
+.include "${.CURDIR}/../libc/inet/Makefile.inc"
+.include "${.CURDIR}/../libc/isc/Makefile.inc"
 .include "${.CURDIR}/../libc/locale/Makefile.inc"
+.include "${.CURDIR}/../libc/nameser/Makefile.inc"
 .include "${.CURDIR}/../libc/net/Makefile.inc"
 .include "${.CURDIR}/../libc/nls/Makefile.inc"
 .include "${.CURDIR}/../libc/tre-regex/Makefile.inc"
