sshd - Make sshd use utmpx / wtmpx
* For now adjust the Makefile for sshd to make it use utmpx and
  wtmpx.  The sshd contrib code expects UTMPX_FILE and WTMPX_FILE
  to be defined in order to use this API.

* sshd's login information is now properly using utmpx/wtmpx so
  'who' whos the full IPV6 address (etc).

Reported-by: dkgroot/NI33

--- a/usr.sbin/sshd/Makefile
+++ b/usr.sbin/sshd/Makefile
@@ -18,6 +18,8 @@ SRCS+=	auth.c auth-options.c auth-pam.c auth-passwd.c auth-rhosts.c \
 # Custom password routine
 SRCS+=	auth-passwd-custom.c
 CFLAGS+= -DCUSTOM_SYS_AUTH_PASSWD
+CFLAGS+= -DUSE_UTMPX -DUSE_WTMPX
+CFLAGS+= -DWTMPX_FILE=_PATH_WTMPX -DUTMPX_FILE=_PATH_UTMPX
 
 WARNS?=	3
 
