reboot(8): Log to wtmpx too.
While here, put wtmp and wtmpx logging under SUPPORT_UTMP and
SUPPORT_UTMPX, respectively.

--- a/sbin/reboot/Makefile
+++ b/sbin/reboot/Makefile
@@ -4,6 +4,7 @@
 PROG=	reboot
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
+CFLAGS+=-DSUPPORT_UTMP -DSUPPORT_UTMPX
 MAN=	reboot.8
 MLINKS=	reboot.8 halt.8 reboot.8 fastboot.8 reboot.8 fasthalt.8
 
