--- a/usr.sbin/pfctl/Makefile
+++ b/usr.sbin/pfctl/Makefile
@@ -5,6 +5,7 @@ SRCS=	pfctl.c parse.y pfctl_parser.c pf_print_state.c pfctl_altq.c
 SRCS+=	pfctl_osfp.c pfctl_radix.c pfctl_table.c pfctl_qstats.c
 SRCS+=	pfctl_optimize.c pf_ruleset.c
 CFLAGS+= -I${.CURDIR}
+#CFLAGS+=-DPFDEBUG
 MAN=	pfctl.8
 
 # Ruleset and Anchor handling
