i386 removal, part 73/x: Remove the ancient nextboot(8) command.
See FreeBSD's r97957.

Reported-by: aly

--- a/sbin/Makefile
+++ b/sbin/Makefile
@@ -106,8 +106,7 @@ SUBDIR=	adjkerntz \
 
 .if ${MACHINE_ARCH} == "x86_64"
 SUBDIR+=mount_smbfs \
-	fdisk \
-	nextboot
+	fdisk
 .endif
 
 .if exists(${.CURDIR}/${MACHINE})
