--- a/etc/Makefile
+++ b/etc/Makefile
@@ -132,6 +132,9 @@ preupgrade:
 		pw -V ${DESTDIR}/etc groupadd _sdpd -g 70
 	(pw -V ${DESTDIR}/etc groupshow _dhcp -q > /dev/null) || \
 		pw -V ${DESTDIR}/etc groupadd _dhcp -g 77
+	# make sure /var/db/entropy is not a file (mtree will make it
+	# as a directory)
+	-[ -f ${DESTDIR}/var/db/entropy ] && rm -f ${DESTDIR}/var/db/entropy)
 
 upgrade_check:
 	@if [ -n "`grep '^sendmail.*/usr/libexec/sendmail/sendmail' ${DESTDIR}/etc/mail/mailer.conf`" ]; then \
