--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -377,7 +377,8 @@ start_vinum="NO"	# set to YES to start vinum
 udevd_enable="NO"	# Run udevd(8) daemon.
 udevd_early="NO"	# Run udevd(8) daemon early in boot (for lvm).
 lvm_enable="NO"		# Run LVM volume discovery.
-entropy_file="/entropy"	# Set to NO to disable caching entropy through reboots.
+entropy_dir="/var/db/entropy"		# Set to NO to disable
+entropy_file="/var/db/entropy/reboot"	# Set to NO to disable
 entropy_save_sz="16384"	# Size of the entropy cache files (in bytes)
 rand_irqs="NO"		# Stir the entropy pool (like "5 11" or NO).
 dmesg_enable="YES"	# Save dmesg(8) to /var/run/dmesg.boot
