kernel/drm: Various cleanups.
* Change further references for the radeonkms.ko -> radeon.ko renaming.

* Remove no longer needed iicbus_if.h from Makefile.

* Cleanup radeon Makefile.

--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -80,7 +80,7 @@ SRCS	= \
 # if CONFIG_AGP is set
 #SRCS+=	drm_agpsupport.c \
 
-SRCS   += device_if.h bus_if.h pci_if.h iicbus_if.h opt_drm.h \
+SRCS   += device_if.h bus_if.h pci_if.h opt_drm.h \
 	  opt_vm.h
 
 KCFLAGS+= -I${SYSDIR}/dev/drm/include
