build - Update pkg-static to version 03, bootstrap https
* There appears to be a database versioning issue between pkg-static
  and pkg on master, re-synchronize the pkg-static tarball.

* Currently the pkg bootstrap installs a df-latest.conf with
  http:// paths instead of https:// paths, because it doesn't
  have the CA root.

  After installing pkg, Makefile.usr now also installs ca_root_nss
  and then copies the df-latest.conf.sample file to df-latest.conf,
  thus installing the official df-latest.conf using https.

* Note that this sequence is not entirely safe because the initial
  bootstrap will be insecure if the CA root certificates are not
  already installed.  They should be installed by our official images,
  but will not be (currently) if one creates an absolutely pristine
  base system with installworld/installkernel/distribution.

  The bootstrap should now work in both situations, but we really
  need to include root certs in the base system I think.

--- a/etc/Makefile.usr
+++ b/etc/Makefile.usr
@@ -18,7 +18,7 @@ MIRROR?=https://mirror-master.dragonflybsd.org
 DPTBALL=/tmp/dports.tar.gz
 PKGBALL=/tmp/pkgboot.tar.xz
 DPDLURL=https://api.github.com/repos/DragonFlyBSD/DPorts/tarball/
-PKGBOOT_VERSION=02
+PKGBOOT_VERSION=03
 PKGBOOT_x86_64=bootstrap_pkg_${PKGBOOT_VERSION}_x86-64.tar.xz
 PKGBOOT=${MIRROR}/dports/bootstraps/${PKGBOOT_${MACHINE_ARCH}}
 ERRPKG="Error: Bootstrap not necessary, ${.CURDIR}/local/sbin/pkg already exists"
@@ -169,6 +169,8 @@ pkg-bootstrap-fetch:
 	tar -xJf ${PKGBALL} -C ${.CURDIR}/local
 	@rm -f ${PKGBALL}
 
+# This is a bit problematic
+#
 pkg-bootstrap-install:
 .if defined(ABIVERS)
 	ABI=${ABIVERS} ${.CURDIR}/local/sbin/pkg-static \
@@ -176,6 +178,9 @@ pkg-bootstrap-install:
 .else
 	${.CURDIR}/local/sbin/pkg-static install -y ${PKG_FLAGS} pkg
 .endif
+	${.CURDIR}/local/sbin/pkg install -y ${PKG_FLAGS} ca_root_nss
+	cp -f ${.CURDIR}/local/etc/pkg/repos/df-latest.conf.sample \
+		${.CURDIR}/local/etc/pkg/repos/df-latest.conf \
 
 pkg-bootstrap:
 .if exists(${.CURDIR}/local/sbin/pkg)
